trunk (2008-05-02)
==================

  - allow public_html customization [gawel]

  - add custom about page to link to collective.buildout

0.1.1 (2008-05-02)
==================

  - bugs fixes [gawel]

0.1.0 (xxxx-xx-xx)
==================

 - Created recipe with ZopeSkel [Gael Pasgrimaud].